# newProj

./: Astar.h  BFS.h  Bestfs.h  CMakeLists.txt  CashManager.h  ClientHandler.h  DFS.h  FileCacheManager.h  Matrix.h  MyMatrixClientHandler.h  MyParallelServer.h  Point.h  ReadFromFile.h  Searchable.h  Searcher.h  Server.h  Servers.h  Solver.h  SolverSearchAdapter.h  State.h  StringReverseClientHandler.h  StringReverseHandler.h  Tester.h  main.cpp  myAstar.h
backUp/: BFS.h  Bestfs.h  CMakeLists.txt  ClientHandler.h  DFS.h  FileCacheManager.h  MyMatrixClientHandler.h  Point.h  Searchable.h  State.h  main.cpp  myAstar.h
